--- a/src/public/views/createUser.hbs
+++ b/src/public/views/createUser.hbs
@@ -4,7 +4,7 @@
       <h1 class="card__title">Create Account</h1>
     </div>
     <div class="card__body">
-      <form action="http://localhost:3000/users/login" method="POST" class="auth-form">
+      <form action="http://localhost:3000/users/createUser" method="POST" class="auth-form">
         <div class="form__row">
           <label for="email" class="form__label">Mail :</label>
           <input type="email" name="email" id="email" class="form__input" placeholder="Enter your email">
@@ -14,7 +14,7 @@
           <input type="password" name="pwd" id="pwd" class="form__input" placeholder="Enter your password">
         </div>
         <div class="form__row">
-          <button type="button" id="login-btn" class="form__submit full-btn">Create Account</button>
+          <button type="submit" id="login-btn" class="form__submit full-btn">Create Account</button>
         </div>
       </form>
     </div>
