create task model and create the route to save task to the db

--- a/src/public/views/login.hbs
+++ b/src/public/views/login.hbs
@@ -7,11 +7,11 @@
       <form action="http://localhost:3000/users/login" method="POST" class="auth-form">
         <div class="form__row">
           <label for="email" class="form__label">Mail :</label>
-          <input type="email" name="email" id="email" class="form__input" placeholder="Enter your email">
+          <input type="email" name="email" id="email" class="form__input" placeholder="Enter your email" required>
         </div>
         <div class="form__row">
           <label for="pwd" class="form__label">Password :</label>
-          <input type="password" name="password" id="pwd" class="form__input" placeholder="Enter your password">
+          <input type="password" name="password" id="pwd" class="form__input" placeholder="Enter your password" required>
         </div>
         <div class="form__row">
           <button type="submit" id="login-btn" class="form__submit full-btn">Login</button>
