--- a/src/public/views/layouts/main.hbs
+++ b/src/public/views/layouts/main.hbs
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="../../images/favicon.png" type="image/x-icon">
   <title>{{title}}</title>
-  <link rel="stylesheet" href="../../stylesheets/style.css">
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  {{!-- <link rel="stylesheet" href="../../stylesheets/style.css"> --}}
 </head>
 <body>
   {{{body}}}
