create dashboard route

--- a/src/public/views/login.hbs
+++ b/src/public/views/login.hbs
@@ -48,7 +48,7 @@
       return res.json();
     }).then(res => {
       if(!res.error){
-        window.location.href = 'http://localhost:3000/tasks';
+        window.location.href = 'http://localhost:3000/dashboard';
       }
     });
 
