--- a/src/public/views/login.hbs
+++ b/src/public/views/login.hbs
@@ -3,6 +3,7 @@
     <div class=" py-3">
       <h1 class="text-4xl text-gray-900">Login</h1>
     </div>
+    <p class="error p-2 hidden text-red-900 bg-red-300 rounded">Error: Mail or password invalid</p>
     <div class="">
       <form action="http://localhost:3000/users/login" method="POST" class="auth-form" autocomplete="off">
         <div class="py-1.5">
@@ -32,6 +33,8 @@
   const form = document.querySelector('form');
   const email = document.querySelector('#email');
   const password = document.querySelector('#pwd');
+  const error = document.querySelector('.error');
+
   form.addEventListener('submit', (e) => {
     e.preventDefault();
 
@@ -49,6 +52,8 @@
     }).then(res => {
       if(!res.error){
         window.location.href = 'http://localhost:3000/dashboard';
+      }else{
+        error.classList.remove('hidden');
       }
     });
 
