--- a/src/public/views/layouts/main.hbs
+++ b/src/public/views/layouts/main.hbs
@@ -9,6 +9,7 @@
   {{!-- <link rel="stylesheet" href="../../stylesheets/style.css"> --}}
 </head>
 <body>
+  {{>header}}
   {{{body}}}
 </body>
 </html>
