--- a/src/public/views/dashboard.hbs
+++ b/src/public/views/dashboard.hbs
@@ -1,6 +1,43 @@
 <main class="p-5">
   <form class="flex items-center">
-    <input type="text" class="py-1 mr-2 px-2 focus:ring border-solid border-gray-400 border-2 rounded block flex-grow outline-none hover:border-blue-500 focus:border-blue-500" required placeholder="Clean room, Do homework...">
-    <button type="submit" class="p-2 hover:bg-blue-600 rounded text-white outline-none bg-blue-700 cursor-pointer">Save Task</button>
+    <input type="text" name="task-title" id="task-title"
+      class="py-1 mr-2 px-2 focus:ring border-solid border-gray-400 border-2 rounded block flex-grow outline-none hover:border-blue-500 focus:border-blue-500"
+      required placeholder="Clean room, Do homework...">
+    <button type="submit" class="p-2 hover:bg-blue-600 rounded text-white outline-none bg-blue-700 cursor-pointer">Save
+      Task</button>
   </form>
+  <tasks-list></tasks-list>
 </main>
+
+<script src="../js/Task.js"></script>
+<script src="../js/TaskList.js" type="module"></script>
+<script type="module">
+  import Task from '../js/Task.js';
+  const taskList = document.querySelector('tasks-list');
+  const taskTitle = document.querySelector('#task-title');
+  const form = document.querySelector('form');
+
+  form.addEventListener('submit', (e) => {
+    e.preventDefault();
+    createTask(taskTitle.value);
+  });
+
+  async function createTask(title) {
+    const params = {
+      method: 'POST',
+      headers: {
+        'Accept': 'application/json',
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify({ title }),
+    };
+
+    const res = await fetch('http://localhost:3000/tasks', params);
+    const json = await res.json();
+
+    if (!json.error) {
+      const task = new Task(json._id, json.title, json.completed, taskList);
+      taskList.add(task);
+    }
+  }
+</script>
