--- a/src/public/views/createUser.hbs
+++ b/src/public/views/createUser.hbs
@@ -4,21 +4,69 @@
       <h1 class="text-4xl text-gray-900">Create Account</h1>
     </div>
     <div class="">
+      <p class="error p-2 hidden text-red-900 bg-red-300 rounded">Error: <span class="error-msg"></span></p>
       <form action="http://localhost:3000/users/createUser" method="POST" class="auth-form">
         <div class="py-1.5">
           <label for="email" class="block pb-1.5">Mail :</label>
-          <input type="email" name="email" id="email"
+          <input type="email" name="email" id="email" minlength="8"
             class="outline-none focus:ring w-full py-1 px-2 border-solid border-gray-400 border-2 rounded block focus:border-blue-500 hover:border-blue-500"
             placeholder="Enter your email" required>
         </div>
         <div class="py-1.5">
           <label for="pwd" class="block pb-1.5">Password :</label>
-          <input type="password" name="password" id="pwd"
-            class="outline-none focus:ring w-full py-1 px-2 border-solid border-gray-400 border-2 rounded block focus:border-blue-500 hover:border-blue-500"
+          <input type="password" name="password" id="pwd" minlength="8"
+            class="outline-none focus:ring my-1.5 w-full py-1 px-2 border-solid border-gray-400 border-2 rounded block focus:border-blue-500 hover:border-blue-500"
             placeholder="Enter your password" required>
+          
         </div>
-        <button type="submit" id="login-btn" class="p-2 hover:bg-blue-600 rounded w-full text-white outline-none bg-blue-700 my-2 cursor-pointer">Create Account</button>
+        <div>
+          <label for="pwd" class="block pb-1.5">Password :</label>
+          <input type="password" name="password" id="verif-pwd" minlength="8"
+            class="outline-none focus:ring w-full py-1 px-2 border-solid border-gray-400 border-2 rounded block focus:border-blue-500 hover:border-blue-500"
+            placeholder="Enter your password agin" required>
+        </div>
+        <button type="submit" id="login-btn"
+          class="p-2 hover:bg-blue-600 rounded w-full text-white outline-none bg-blue-700 my-2 cursor-pointer">Create
+          Account</button>
       </form>
     </div>
   </div>
 </main>
+
+<script>
+  const form = document.querySelector('form');
+  const email = document.querySelector('#email');
+  const firstPassword = document.querySelector('#pwd');
+  const verifiedPassword = document.querySelector('#verif-pwd');
+  const error = document.querySelector('.error');
+  const errorMsg = document.querySelector('.error-msg');
+
+  form.addEventListener('submit', (e) => {
+    e.preventDefault();
+    const mail = email.value;
+    const password = firstPassword.value;
+    if (!(password === verifiedPassword.value)) {
+      errorMsg.textContent = 'passwords dont match';
+      error.style.display = 'block';
+    } else {
+      const params = {
+        method: 'POST',
+        headers: {
+          'Accept': 'application/json',
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ email: mail, password })
+      }
+
+      fetch('http://localhost:3000/users/createUser', params)
+      .then(res => res.json)
+      .then((res) => {
+        if(!res.error){
+          window.location.href = 'http://localhost:3000/dashboard';
+        }else{
+          errorMsg.textContent = 'User already exist';
+        }
+      })
+    }
+  })
+</script>
