--- a/src/public/views/partials/header.hbs
+++ b/src/public/views/partials/header.hbs
@@ -5,7 +5,7 @@
   <div class="flex items-center">
     {{#if connected}}
     <a href="http://localhost:3000/users/logout">
-      <button class="p-2 hover:bg-red-500 bg-red-600 text-white rounded cursor-pointer">Logout</button>
+      <button id="logout" class="p-2 hover:bg-red-500 bg-red-600 text-white rounded cursor-pointer">Logout</button>
     </a>
     {{else}}
     <a href="http://localhost:3000/users/login" class="mr-2">
