--- a/src/public/views/login.hbs
+++ b/src/public/views/login.hbs
@@ -21,7 +21,7 @@
         <button type="submit" id="login-btn"
           class="p-2 hover:bg-blue-600 rounded w-full text-white outline-none bg-blue-700 my-2 cursor-pointer">Login</button>
       </form>
-      <a href="http://localhost:3000/users/createUser">
+      <a href="http://localhost:3000/users/signup">
         <button id="create-user-btn"
           class="p-2 hover:bg-gray-600 bg-gray-800 w-full text-white rounded cursor-pointer">Create User</button>
       </a>
