--- a/src/public/views/partials/header.hbs
+++ b/src/public/views/partials/header.hbs
@@ -12,7 +12,7 @@
       <button
         class="p-2 hover:bg-blue-600 rounded text-white outline-none bg-blue-700 cursor-pointer">Login</button>
     </a>
-    <a href="http://localhost:3000/users/createUser">
+    <a href="http://localhost:3000/users/signup">
       <button class="p-2 hover:bg-gray-600 bg-gray-800 text-white rounded cursor-pointer">Create User</button>
     </a>
     {{/if}}
