--- a/src/public/stylesheets/scss/partials/_body.scss
+++ b/src/public/stylesheets/scss/partials/_body.scss
@@ -4,4 +4,5 @@ html, body{
   height: 100%;
   background: colors.$background-color;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  position: relative;
 }
