--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -85,6 +85,9 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+}
+
+* {
   box-sizing: border-box;
 }
 
@@ -144,10 +147,59 @@ table {
   width: 100%;
 }
 
+.hidden {
+  display: none;
+}
+
+.overflow-hidden {
+  overflow: hidden;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+  text-transform: capitalize;
+}
+
+input {
+  display: block;
+  padding: 0.5rem;
+  border-radius: 6px;
+  border: 2px solid #cfcfcf;
+  outline: none;
+  width: 100%;
+}
+input:hover, input:focus, input:active {
+  border-color: black;
+}
+
+button {
+  padding: 0.5rem 0.8rem;
+  border-radius: 6px;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+button.black {
+  background: black;
+  color: white;
+}
+button.black:hover {
+  background-color: #333333;
+}
+button.white {
+  background: white;
+  color: black;
+}
+
 html, body {
   height: 100%;
   background: #FEFEFE;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  position: relative;
 }
 
 .sidebar {
@@ -179,7 +231,7 @@ html, body {
   background: white;
   border: none;
   cursor: pointer;
-  border-radius: 3px;
+  border-radius: 6px;
   display: flex;
   align-items: center;
 }
@@ -212,7 +264,7 @@ html, body {
   color: white;
   text-transform: capitalize;
   padding: 0.5rem;
-  border-radius: 3px;
+  border-radius: 6px;
   font-weight: 600;
 }
 .menu__link.active, .menu__link:hover {
@@ -223,6 +275,66 @@ html, body {
   height: 1rem;
   width: 1rem;
   margin-right: 0.3rem;
+}
+
+.project {
+  padding: 1rem;
+}
+
+.project__info {
+  padding-bottom: 1rem;
+}
+
+.project__ctas {
+  padding: 0.4rem 0;
+}
+
+.project__title {
+  padding: 2rem 0;
+}
+
+#create__task__btn {
+  display: flex;
+  align-items: center;
+}
+#create__task__btn .add__icon {
+  height: 1.1rem;
+  width: 1.1rem;
+  margin-right: 0.5rem;
+  margin-top: -0.1rem;
+}
+
+.overlay {
+  position: absolute;
+  background: rgba(31, 31, 31, 0.719);
+  height: 100%;
+  width: 100%;
+  display: block;
+}
+
+.modal {
+  position: absolute;
+  width: 350px;
+  left: 0;
+  right: 0;
+  margin: 1rem auto;
+  background: white;
+  z-index: 2;
+  border-radius: 6px;
+}
+
+.modal__header, .modal__body, .modal__footer {
+  padding: 1rem 0.8rem;
+}
+
+.modal__footer {
+  background: whitesmoke;
+  text-align: right;
+  border-radius: 0 0 6px 6px;
+}
+
+.modal__title {
+  padding: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
