--- a/src/public/stylesheets/scss/partials/_modal.scss
+++ b/src/public/stylesheets/scss/partials/_modal.scss
@@ -5,7 +5,7 @@
   background: rgba(31, 31, 31, 0.719);
   height: 100%;
   width: 100%;
-  display: block;
+  display: none;
 }
 
 .modal{
@@ -16,6 +16,7 @@
   margin: 1rem auto;
   background: white;
   z-index: 2;
+  transform: translateY(-1000%);
   border-radius: variables.$radius;
 }
 
