--- a/src/public/views/dashboard.hbs
+++ b/src/public/views/dashboard.hbs
@@ -13,7 +13,7 @@
 </div>
 <div class="flex h-full">
   {{>sidebar}}
-  <main class="project">
+  <main class="project overflow-hidden w-full">
     <div class="project__info">
       <h1 class="project__title">Dashboard</h1>
       <div class="project__ctas">
@@ -31,4 +31,4 @@
 
 <script src="../js/Task.js"></script>
 <script src="../js/TaskList.js" type="module"></script>
-<script src="../js/dashboard.js"></script>
+<script src="../js/dashboard.js" type="module"></script>
