--- a/src/public/stylesheets/scss/style.scss
+++ b/src/public/stylesheets/scss/style.scss
@@ -11,4 +11,6 @@
 @use './partials/body';
 @use './partials/sidebar';
 @use './partials/project';
+@use './partials/header';
 @use './partials/modal';
+@use './partials/error';
