--- a/src/public/stylesheets/scss/config/_utils.scss
+++ b/src/public/stylesheets/scss/config/_utils.scss
@@ -8,7 +8,9 @@
 
 .flex-center{
   justify-content: center;
+  justify-items: center;
   align-items: center;
+  align-content: center;
 }
 
 .h-full{
