--- a/src/public/views/404.hbs
+++ b/src/public/views/404.hbs
@@ -1,5 +1,5 @@
 {{>header}}
 
-<main class="flex-col flex-center p-normal">
+<main class="">
   <img src="../images/404.svg" class="error-illustration" />
 </main>
