--- a/src/public/stylesheets/scss/style.scss
+++ b/src/public/stylesheets/scss/style.scss
@@ -12,5 +12,6 @@
 @use './partials/sidebar';
 @use './partials/project';
 @use './partials/header';
+@use './partials/card';
 @use './partials/modal';
 @use './partials/error';
