fix url for heroku

--- a/src/public/views/partials/header.hbs
+++ b/src/public/views/partials/header.hbs
@@ -1,13 +1,13 @@
 <header class="flex">
-  <a href="http://localhost:3000/">
+  <a href="/">
     <img src="../../images/logo.svg" id="brand-logo" class="" />
   </a>
   <div class="flex">
-    <a href="http://localhost:3000/users/login" class="">
+    <a href="/users/login" class="">
       <button
         class="black">Login</button>
     </a>
-    <a href="http://localhost:3000/users/signup" class="">
+    <a href="/users/signup" class="">
       <button id="" class="white">Create User</button>
     </a>
   </div>
